# linux-selective-hardening

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.benchmark  Dockerfile.kernel  Makefile  README.md  benchmark.sh  driver.py  linuxkit.yml  linuxkit.yml.template  parse.py  profile.sh  qemu-ssh-access  tracks.py  x86_64_config-gcov
performance/: Dockerfile.build  Dockerfile.kernel  Dockerfile.ubuntu  Makefile  README.md  benchmark  benchmark-with-kcbench  boot  boot.old  deploy  driver.py  ignorelist.txt  linuxkit.yml  qemu-ssh-access.pub  x86_64_config  x86_64_config-cfi-full  x86_64_config-cfi-none  x86_64_config_cfi
pocs/hardened_usercopy/: README.md
pocs/kasan/: README.md
pocs/kasan/instrumentation-check/: Makefile  README.md  ignorelist.txt  main.c
pocs/kasan/kernel-module/: Makefile  README.md  full.as  ignorelist.txt  selective.as
pocs/kcfi/: README.md
pocs/kcfi/instrumentation-check/: README.md  test.txt
pocs/kcfi/kernel-module/: Makefile  README.md  hello.c  meta.txt  results-1.txt
pocs/kcfi/user-space/: Makefile  README.md  ignorelist.txt  main.c  process.sh  results.txt  run.sh  time.c  (+1 more)
pocs/mverify/: README.md
pocs/mverify/llvm-pass/: CMakeLists.txt  README.md
pocs/mverify/llvm-pass/mverify/: CMakeLists.txt  MVerify.cpp
pocs/mverify/llvm-pass/test/: main.cpp  main.ll
profiling/: Dockerfile.all  Dockerfile.build  Dockerfile.kernel  Dockerfile.nas  Dockerfile.phoronix  Dockerfile.spec  Dockerfile.ubuntu  Dockerfile.ubuntu.old  Makefile  README.md  driver.py  gather-on-test.sh  input.phoronix  linuxkit.yml  linuxkit.yml.template
(+4 files in other folders)
